[package]
name = "mdbook-emojicodes"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "MDBook Preprocessor for converting your emojicodes (: cat :) into real emojis"
readme = "README.md"
repository = "https://github.com/blyxyas/mdbook-emojicodes"
keywords = ["emoji", "mdbook", "mdbook-preprocessor", "preprocessor", "emojicodes"]
categories = ["development-tools", "parser-implementations", "encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = { version = "0.4.25", default-features = false}
anyhow = "1.0"
mdbook-preprocessor-boilerplate = "0.1.1"
emojis = "0.5.2"
regex = "1.7.0"
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"

[features]
default = ["custom_emojis"]
custom_emojis = []
